...
            android:id="@+id/add_menu_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/amatic_bold"
            android:text="Add Menu Item"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/item_name"
...
            android:fontFamily="@font/amatic"
            android:text="Item Name"
            android:textSize="22dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/item_name_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="85dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
...
            android:fontFamily="@font/amatic"
            android:text="Caffeine for Small"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/caffeine_small_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="135dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
...
            android:fontFamily="@font/amatic"
            android:text="Caffeine for Medium"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/caffeine_medium_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="185dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
...
            android:fontFamily="@font/amatic"
            android:text="Caffeine for Large"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/caffeine_large_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="235dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
...
            android:fontFamily="@font/amatic"
            android:text="Price for Small"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/price_small_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="285dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
...
            android:fontFamily="@font/amatic"
            android:text="Price for Medium"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/price_medium_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="335dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
...
            android:fontFamily="@font/amatic"
            android:text="Price for Large"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/price_large_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="385dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
...
            android:fontFamily="@font/amatic"
            android:text="Calories for Small"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/calories_for_small_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="435dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
...
            android:fontFamily="@font/amatic"
            android:text="Calories for Medium"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/calories_for_medium_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="485dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
...
            android:fontFamily="@font/amatic"
            android:text="Calories for Large"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/calories_for_large_edit"
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="535dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
...
